--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the levered free cash flow<br> 
+    What is the levered free cash flow calculator?<br>
+    The levered free cash flow calculator is a tool that computes the amount of cash generated after paying debt obligations.<br>
+    How to calculate levered free cash flow?<br>
+    To calculate levered free cash flow you should use the following formula:<br>
+    LFCF = EBITDA + Δ(NWC) - CapEx - mandatory debt payment<br>
+    Why use levered free cash flow calculator?<br>
+    The levered free cash flow calculator is used in order to measure the amount of cash generated after paying debt obligations.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
